# devops-woc-training

./: .gitignore  .pre-commit-config.yml  Dockerfile  Dockerfile.backend  azure-pipelines.yml  ci-pipeline.yml  code-ci-cd-pipeline.yml  docker-compose.yml  infra-ci-cd-pipeline.yml  prometheus.yml  pyproject.toml
Python/: test_maths_addition.py
k8s/: deployment.yml  service.yml
postgres/18/docker/: postmaster.pid
postgres/18/docker/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2840_fsm  2841  pg_internal.init
postgres/18/docker/base/16384/: 1247  1249  1249_fsm  1259  16385  16386  16395  16396  16398  2224  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres/18/docker/base/5/: pg_internal.init
postgres/18/docker/global/: 1260  1262  2671  pg_control  pg_internal.init
src/UNKNOWN.egg-info/: top_level.txt
src/azure-sa/: .env.example  index.js  package.json
src/backend/app/: crud.py  database.py  main.py  models.py  upload_test.py
terraform/: access_policy.tf  acr.tf  aks.tf  asp.tf  azure-postgres.tf  init.tf  kv.tf  networking.tf  rg.tf  storage_account_container.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  webapp.tf
